welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.code
def fairePot(){
	def growFlowers(){
	setCouleurBrosse(Color.RED)
	avance();avance();avance();recule();gauche();gauche();avance();recule();recule
	leveBrosse();setCouleurBrosse(Color.YELLOW);avance();baisseBrosse()
	leveBrosse();droite();avance();avance()
	}
	growflowers()
}
